# rock-display

./: .gitignore  CMakeLists.txt  README.md  manifest.xml
src/: CMakeLists.txt  ConfigItem.cpp  ConfigItem.hpp  ConfigItemHandler.cpp  ConfigItemHandler.hpp  ConfigItemHandlerRepository.cpp  ConfigItemHandlerRepository.hpp  ConfigurationSelectDialog.cpp  ConfigurationSelectDialog.hpp  ConfigurationSelectDialog.ui  Dummy.cpp  Dummy.hpp  List.cpp  Main.cpp  Mainwindow.cpp  Mainwindow.hpp  NameServiceItemDelegate.cpp  NameServiceItemDelegate.hpp  NameServiceModel.cpp  NameServiceModel.hpp  PluginHandle.hpp  PortItem.cpp  PortItem.hpp  PropertyItem.cpp  PropertyItem.hpp  RDItemDelegate.cpp  RDItemDelegate.hpp  TaskItem.cpp  TaskItem.hpp  TaskModel.cpp  TaskModel.hpp  TaskModelNotifier.cpp  TaskModelNotifier.hpp  Test.cpp  TypeConverter.hpp  TypeConverterFactory.hpp  TypedItem.cpp  TypedItem.hpp  Types.hpp  VisualizerAdapter.cpp  (+9 more)
src/configitemhandlers/: BinaryCtxMenuHandler.cpp  BinaryCtxMenuHandler.hpp  BoolHandler.cpp  BoolHandler.hpp  ContainerHandler.cpp  ContainerHandler.hpp  EnumHandler.cpp  EnumHandler.hpp  ImageCtxMenuHandler.cpp  ImageCtxMenuHandler.hpp  StdStringHandler.cpp  StdStringHandler.hpp
src/vizplugins/: CMakeLists.txt  Vizkit3dPluginRepository.cpp  Vizkit3dPluginRepository.hpp  artificialhorizonplugin.cpp  artificialhorizonplugin.hpp  artificialhorizonplugin_p.hpp  base_types_pluginfactory.cpp  base_types_pluginfactory.hpp  imageviewplugin.cpp  imageviewplugin.hpp  imageviewplugin_p.hpp  orientationviewplugin.cpp  orientationviewplugin.hpp  orientationviewplugin_p.hpp  plot2d_pluginfactory.hpp  plot2dplugin.cpp  plot2dplugin.hpp  plot2dplugin_p.hpp  rangeviewplugin.cpp  rangeviewplugin.hpp  rangeviewplugin_p.hpp  sonardisplayplugin.cpp  sonardisplayplugin.hpp  sonardisplayplugin_p.hpp  sonarviewplugin.cpp  sonarviewplugin.hpp  sonarviewplugin_p.hpp  sonarwidgetplugin.cpp  sonarwidgetplugin.hpp  sonarwidgetplugin_p.hpp  streamalignerwidgetplugin.cpp  streamalignerwidgetplugin.hpp  streamalignerwidgetplugin_p.hpp  virtualjoystickplugin.cpp  virtualjoystickplugin.hpp  virtualjoystickplugin_p.hpp  vizkit3d_pluginfactory.hpp  vizkit3dplugins.cpp  vizkit3dplugins.hpp  vizkit3dplugins_p.hpp  (+4 more)
src/vizplugins/designer/: pluginmanager.cpp  pluginmanager_p.h
test/: CMakeLists.txt  test_Dummy.cpp
